landing page done

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -408,3 +408,21 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+img {
+  vertical-align: middle;
+}
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
